--- a/agile1.html
+++ b/agile1.html
@@ -75,7 +75,7 @@
                         </div>
                         <div>
                             <h4>Lokasi</h4>
-                            <p>Kota, Negara</p>
+                            <p>Medan, Indonesia</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -84,7 +84,7 @@
                         </div>
                         <div>
                             <h4>Email</h4>
-                            <p>email@contoh.com</p>
+                            <p>email@.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
