--- a/Abdur Robi Alfian/coomingsoon.html
+++ b/Abdur Robi Alfian/coomingsoon.html
@@ -32,7 +32,7 @@
 </style>
 <body>
     <div class="walwe">
-        <a href="/index.html" class="btn"><<</a>
+        <a href="./index.html" class="btn"><<</a>
         <div style='display: flex;'>
             <h1>Cooming Soon</h1>
             <img src="cat.gif" alt="cat_uiia" width="150px">
