--- a/Abdur Robi Alfian/index.html
+++ b/Abdur Robi Alfian/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="home-content">
             <h1>Halo, Nama saya Abdur <span>Robi </span>Alfian</h1>
-            <h3 class="typing-text">I want to be <span></span></h3>
+            <h3 class="typing-text">I want to be a <span></span></h3>
             <p>Saya adalah seorang mahasiswa yang berumur 20 tahun, Selain suka mengaji saya juga sangat suka ngoding dan tentunya saya juga suka pacar saya. Saya memiliki pengalaman menjadi content creator di youtube dan sekarang udah pensiun tetapi belum izin pamit hehe.</p>
             <div class="social-icons">
                 <a href="./coomingsoon.html"><i class="fa-brands fa-github"></i></a>
