--- a/Zein Ath Thariq Badres/agile1.html
+++ b/Zein Ath Thariq Badres/agile1.html
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <img src="/image/tes.jpg" alt="Foto Profil" class="profile-img">
+            <img src="/agile/Zein Ath Thariq Badres/img/pp.jpg" alt="Foto Profil" class="profile-img">
             <p>Mahasiswa | Mobile Dev(Aaamiin)</p>
             <div class="hero-buttons">
                 <a href="#contact" class="cta-button">Hubungi Saya</a>
